@@ -151,13 +151,13 @@ p.error {
 	font-weight: bold;
 }
 
-.warning {
+p.warning {
 	color: red;
 	font-weight: bold;
 	font-size: 1.091em;
 }
 
-.nowarning {
+p.nowarning {
 	color: #333;
 	font-weight: bold;
 	font-size: 1.091em;
@@ -1743,78 +1743,19 @@ a img.calendar {
 /* -- SYSTEM MESSAGE STYLES ----------------------------- */
 
 #system-message dd.message ul {
-	background: #C3D2E5 url(../images/notice-info.png) 4px center no-repeat;
+	background-image: url(../images/notice-info.png);
 }
 
 #system-message dd.error ul {
-	color: #c00;
-	background: #E6C0C0 url(../images/notice-alert.png) 4px top no-repeat;
-	border-top: 3px solid #DE7A7B;
-	border-bottom: 3px solid #DE7A7B;
+	background-image: url(../images/notice-alert.png);
+}
+
+#system-message dd.warning ul {
+	background-image: url(../images/notice-note.png);
 }
 
 #system-message dd.notice ul {
-	color: #c00;
-	background: #EFE7B8 url(../images/notice-note.png) 4px top no-repeat;
-	border-top: 3px solid #F0DC7E;
-	border-bottom: 3px solid #F0DC7E;
-}
-
-/* -- SYSTEM MESSAGES ---- */
-
-/* Relocated from system.css */
-#system-message {
-	margin-bottom: 10px;
-	padding: 0;
-}
-
-#system-message dt {
-	font-weight: bold;
-}
-
-#system-message dd {
-	margin: 0;
-	font-weight: bold;
-	text-indent: 30px;
-}
-
-#system-message dd ul {
-	color: #0055BB;
-	margin-bottom: 10px;
-	list-style: none;
-	padding: 10px;
-	border-top: 3px solid #84A7DB;
-	border-bottom: 3px solid #84A7DB;
-}
-
-#system-message dt.message {
-	display: none;
-}
-
-#system-message dd.message {
-
-}
-
-#system-message dt.error {
-	display: none;
-}
-
-#system-message dd.error ul {
-	color: #c00;
-	background-color: #E6C0C0;
-	border-top: 3px solid #DE7A7B;
-	border-bottom: 3px solid #DE7A7B;
-}
-
-#system-message dt.notice {
-	display: none;
-}
-
-#system-message dd.notice ul {
-	color: #c00;
-	background-color: #EFE7B8;
-	border-top: 3px solid #F0DC7E;
-	border-bottom: 3px solid #F0DC7E;
+	background-image: url(../images/notice-note.png);
 }
 
 /* -- LOGIN STYLES ----------------------------- */
