@@ -1989,33 +1989,6 @@ a img.calendar {
 }
 
 /**
- * System Standard Messages
- */
-#system-message dd.message ul {
-	background: #C3D2E5 url(../images/notice-info.png) 4px center no-repeat;
-}
-
-/**
- * System Error Messages
- */
-#system-message dd.error ul {
-	color: #c00;
-	background: #E6C0C0 url(../images/notice-alert.png) 4px top no-repeat;
-	border-top: 3px solid #DE7A7B;
-	border-bottom: 3px solid #DE7A7B;
-}
-
-/**
- * System Notice Messages
- */
-#system-message dd.notice ul {
-	color: #c00;
-	background: #EFE7B8 url(../images/notice-note.png) 4px top no-repeat;
-	border-top: 3px solid #F0DC7E;
-	border-bottom: 3px solid #F0DC7E;
-}
-
-/**
  * JGrid styles
  */
 a.jgrid:hover {
