@@ -4,20 +4,5 @@
  * @license		GNU General Public License version 2 or later; see LICENSE.txt
  */
 
-/* System Messages */
-#system-message    { margin-bottom: 10px; padding: 0;}
-#system-message dt { font-weight: bold; }
-#system-message dd { margin: 0; font-weight: bold; text-indent: 30px; }
-#system-message dd ul { color: #0055BB; margin-bottom: 10px; list-style: none; padding: 10px; border-top: 3px solid #84A7DB; border-bottom: 3px solid #84A7DB;}
-
-/* System Standard Messages */
-#system-message dt.message { display: none; }
-#system-message dd.message {  }
-
-/* System Error Messages */
-#system-message dt.error { display: none; }
-#system-message dd.error ul { color: #c00; background-color: #E6C0C0; border-top: 3px solid #DE7A7B; border-bottom: 3px solid #DE7A7B;}
-
-/* System Notice Messages */
-#system-message dt.notice { display: none; }
-#system-message dd.notice ul { color: #c00; background: #EFE7B8; border-top: 3px solid #F0DC7E; border-bottom: 3px solid #F0DC7E;}
+/* Import project-level system CSS */
+@import url(../../../../media/system/css/system.css);
