@@ -146,7 +146,6 @@ a img.calendar {
 .error
 {
         padding:0px;
-
         margin-bottom: 20px;
 }
 
@@ -163,82 +162,20 @@ a img.calendar {
                 margin:10px 0 20px 0;
                 border-left:0;
                 border-right:0;
-
 }
 
-#system-message dt { font-weight: bold; }
-#system-message dd { margin: 0;  font-weight: bold; text-indent: 0px;padding:0 }
-#system-message dd ul { color: #000; margin: 10px 0; list-style: none; padding: 0px; }
-#system-message dd ul li{ line-height:1.5em }
+#system-message dd {text-indent: 0px; padding:0 }
+#system-message dd ul {margin: 10px 0; padding: 0px;}
 
 /* System Standard Messages */
-#system-message dt.message { display: none; }
-#system-message dd.message {  }
+#system-message dd.message ul {background-image: none; }
 #system-message dd.message ul li{background:none !important}
 
 /* System Error Messages */
-#system-message dt.error { display: none; }
-#system-message dd.error {  }
-#system-message dd.error ul { color: #000;margin:0}
-
-/* System Notice Messages */
-#system-message dt.notice { display: none; }
-#system-message dd.notice {  }
-#system-message dd.notice ul { color: #000; }
-
-/* -- SYSTEM MESSAGES ---- */
-
-/* Relocated from system.css */
-#system-message {
-    margin-bottom: 10px;
-    padding: 0;
-}
-
-#system-message dt {
-    font-weight: bold;
-}
-
-#system-message dd {
-    margin: 0;
-    font-weight: bold;
-       padding: 0;
-}
-
-#system-message dd ul {
-    color: #0055BB;
-    margin-bottom: 10px;
-    list-style: none;
-    padding: 10px;
-    border-top: 3px solid #84A7DB;
-    border-bottom: 3px solid #84A7DB;
-}
-
-#system-message dt.message {
-    display: none;
-}
-
-#system-message dd.message {
-
-}
-
-#system-message dt.error {
-    display: none;
-}
-
 #system-message dd.error ul {
+    margin: 0;
     color: #0C2F5A  ;
     background-color: #D9EBF9;
-    border-top: 3px solid #1967A1;
-    border-bottom: 3px solid #1967A1;
-}
-
-#system-message dt.notice {
-    display: none;
-}
-
-#system-message dd.notice ul {
-    color: #c00;
-    background-color: #EFE7B8;
-    border-top: 3px solid #F0DC7E;
-    border-bottom: 3px solid #F0DC7E;
+    border-top-color: #1967A1;
+    border-bottom-color: #1967A1;
 }
